BoaUAT/src/objects/Key_Business_Contacts__c.object
<CustomObject>
    <fields>
        <fullName>Credit_Application_Form__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Credit Application Form</label>
        <referenceTo>Credit_Application_Form__c</referenceTo>
        <relationshipLabel>Key Business Contacts</relationshipLabel>
        <relationshipName>Key_Business_Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Date_Of_Birth__c</fullName>
        <label>Date Of Birth</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Physical_Address__c</fullName>
        <label>Physical Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Private_telephone_number__c</fullName>
        <label>Private telephone number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Role__c</fullName>
        <label>Role</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Director</fullName>
                </value>
                <value>
                    <fullName>Partner</fullName>
                </value>
                <value>
                    <fullName>Proprietor</fullName>
                </value>
                <value>
                    <fullName>Solicitor</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Key Business Contacts</label>
    <nameField>
        <label>Key Business Contacts Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Key Business Contacts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>